Ongoing RL9 documentatin work